<resources>
    <string name="app_name">OpenCV</string>
    <string name="Activity1Gray">图像灰度</string>
    <string name="Activity1GrayButton">图像灰度化</string>
    <string name="title_01">知识点01</string>
    <string name="Activity2Choose">图像选择</string>
    <string name="title_02">知识点02</string>
    <string name="Activity3Save">图像保存</string>
    <string name="title_03">知识点03</string>
    <string name="Activity4Cut">图像裁剪</string>
    <string name="title_04">知识点04</string>
    <string name="Activity5Draw">图像绘制</string>
    <string name="title_05">知识点05</string>
    <string name="Activity6Read1">图像取反-慢</string>
    <string name="title_06">知识点06</string>
    <string name="Activity6Read1Button">读取一个像素取反</string>
    <string name="Activity7Read2">图像取反-中</string>
    <string name="title_07">知识点07</string>
    <string name="Activity7Read2Button">读取一行像素取反</string>
    <string name="Activity8Read3">图像取反-快</string>
    <string name="title_08">知识点08</string>
    <string name="Activity8Read3Button">读取全部像素取反</string>
    <string name="Activity9Channel">图像通道</string>
    <string name="title_09">知识点09</string>
    <string name="Activity9ChannelButton">图像通道分离与合并</string>
    <string name="Activity10Division">图像均值</string>
    <string name="title_10">知识点10</string>
    <string name="Activity10DivisionButton">图像均值分割</string>
    <string name="Activity11Compose">图像叠加</string>
    <string name="title_11">知识点11</string>
    <string name="title_12">知识点12</string>
    <string name="Activity12Add">图像亮度与对比度</string>
    <string name="title_13">知识点13</string>
    <string name="Activity13Logic">图像逻辑操作</string>
    <string name="title_14">知识点14</string>
    <string name="Activity14Splicing">图像拼接</string>
    <string name="title_15">知识点15</string>
    <string name="Activity15Normalization">图像归一化</string>
    <string name="title_16">知识点16</string>
    <string name="Activity16Blur">图像模糊</string>
    <string name="title_17">知识点17</string>
    <string name="Activity17Median">图像中值滤波</string>
    <string name="title_18">图像形态学运算</string>
    <string name="Activity18Morphology">图像形态学运算</string>
    <string name="title_19">知识点19</string>
    <string name="Activity19Canny">图像边缘检测</string>
    <string name="title_20">知识点20</string>
    <string name="Activity20Thresholding">图像OTSU阈值化</string>
    <string name="title_21">知识点21</string>
    <string name="Activity21HoughLine">图像直线检测</string>
    <string name="title_22">知识点22</string>
    <string name="Activity22HoughCircle">图像圆形检测</string>
    <string name="title_23">知识点23</string>
    <string name="Activity23Histogram">图像直方图均衡化</string>
    <string name="title_24">知识点24</string>
    <string name="Activity24Matching">图像模板匹配</string>
    <string name="title_25">知识点25</string>
    <string name="Activity25Harris">图像Harris角点检测</string>
    <string name="title_26">知识点26</string>
    <string name="Activity26Tomasi">图像Tomasi角点检测</string>
    <string name="title_27">知识点27</string>
    <string name="Activity27SIFI">图像SIFI特征检测</string>
    <string name="title_28">知识点28</string>
    <string name="Activity28FaceRecognition">图像人脸识别</string>
    <string name="title_29">知识点29</string>
    <string name="Activity29Camera">相机预览</string>
    <string name="Button29Camera">切换</string>
    <string name="title_30">知识点30</string>
    <string name="Activity30FaceTracking">人脸跟踪</string>
    <string name="Button30Camera">切换</string>
    <string name="Button30Photograph">拍照</string>

    <string name="exam">考试</string>
    <string name="examination">Examination</string>
    <string name="ExamCode">代码</string>
    <string name="ExamCancel">取消</string>
    <string name="exam_01">考点01-图像显示</string>
    <string name="describe1">显示任意一张图像</string>
    <string name="exam_02">考点02-图像绘制</string>
    <string name="describe2">绘制图像：背景为黑色，大小为500*500，中间为绿色矩形且边的宽度占总宽度的1/5，还有两条红色直线交叉显示</string>
    <string name="exam_03">考点03-图像拼接</string>
    <string name="describe3">两张图像分别裁剪左侧和右侧，然后拼接到一起成为一张图像</string>
    <string name="exam_04">考点04-图像分割</string>
    <string name="describe4">分割红色台球图像</string>
    <string name="exam_05">图像裁剪</string>
    <string name="describe5">考点05-图像裁剪\n\n裁剪图片并调整亮度对比度</string>

    <string name="channel_description">Thank you for using my application</string>
    <string name="channel_name">Thank you</string>
    <string name="switchModel">切换</string>

    <string name="dialog_reset">重置</string>
    <string name="dialog_delete">删除</string>
    <string name="dialog_ok">确定</string>
    <string name="dialog_cancel">取消</string>

    <string name="about">关于</string>
    <string name="aboutContent">作者Github与Outlook邮箱</string>
    <string name="about_version">Version 1.0</string>
    <string name="about_email">Outlook</string>
    <string name="about_github">Github</string>
    <string name="about_opencv">OpenCV</string>
</resources>