<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:animateLayoutChanges="true"

    tools:context=".MainActivity">
    <!--android:background="@drawable/background"已经设置全局背景图片，而且会影响深色模式的显示，故不用此属性-->

    <ImageView
        android:id="@+id/background"
        android:layout_width="0dp"
        android:layout_height="210dp"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bg1" />

    <ImageButton
        android:id="@+id/imageButtonOpenCV"
        style="@android:style/Widget.ImageButton"
        android:layout_width="wrap_content"
        android:layout_height="130dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/app_name"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="@+id/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/background">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/designBy"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:gravity="center"
                android:text="@string/examination"
                android:textColor="@color/orange"
                android:textSize="24sp"
                android:textStyle="bold"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button1_gray"
                android:layout_width="230dp"
                android:layout_height="70dp"

                android:insetTop="0dp"
                android:text="@string/Activity1Gray"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:backgroundTint="@color/orange"

                app:cornerRadius="50dp"

                app:layout_constraintEnd_toEndOf="@+id/designBy"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toStartOf="@+id/designBy"
                app:layout_constraintTop_toBottomOf="@+id/designBy" />

            <Button
                android:id="@+id/button2_choose"
                android:layout_width="230dp"
                android:layout_height="70dp"

                android:text="@string/Activity2Choose"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:backgroundTint="@android:color/holo_orange_dark"
                app:cornerRadius="50dp"
                app:layout_constraintEnd_toEndOf="@+id/button1_gray"
                app:layout_constraintStart_toStartOf="@+id/button1_gray"
                app:layout_constraintTop_toBottomOf="@+id/button1_gray" />

            <Button
                android:id="@+id/button3_save"
                android:layout_width="230dp"
                android:layout_height="70dp"

                android:text="@string/Activity3Save"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:backgroundTint="@color/purple_500"
                app:cornerRadius="50dp"
                app:layout_constraintEnd_toEndOf="@+id/button2_choose"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/button2_choose"
                app:layout_constraintTop_toBottomOf="@+id/button2_choose" />

            <Button
                android:id="@+id/button4_cut"
                android:layout_width="230dp"
                android:layout_height="70dp"

                android:text="@string/Activity4Cut"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:backgroundTint="@color/blue"
                app:cornerRadius="50dp"
                app:layout_constraintEnd_toEndOf="@+id/button3_save"
                app:layout_constraintStart_toStartOf="@+id/button3_save"
                app:layout_constraintTop_toBottomOf="@+id/button3_save" />

            <Button
                android:id="@+id/button5_draw"
                android:layout_width="230dp"
                android:layout_height="70dp"

                android:text="@string/Activity5Draw"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:backgroundTint="@android:color/holo_purple"
                app:cornerRadius="50dp"
                app:layout_constraintEnd_toEndOf="@+id/button4_cut"
                app:layout_constraintStart_toStartOf="@+id/button4_cut"
                app:layout_constraintTop_toBottomOf="@+id/button4_cut" />

            <Button
                android:id="@+id/button6_read1"
                android:layout_width="230dp"
                android:layout_height="70dp"

                android:text="@string/Activity6Read1"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:backgroundTint="@color/teal_700"
                app:cornerRadius="50dp"
                app:layout_constraintEnd_toEndOf="@+id/button5_draw"
                app:layout_constraintStart_toStartOf="@+id/button5_draw"
                app:layout_constraintTop_toBottomOf="@+id/button5_draw" />

            <Button
                android:id="@+id/button7_read2"
                android:layout_width="230dp"
                android:layout_height="70dp"

                android:text="@string/Activity7Read2"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:visibility="visible"
                app:backgroundTint="@color/teal_700"
                app:cornerRadius="50dp"
                app:layout_constraintEnd_toEndOf="@+id/button6_read1"
                app:layout_constraintStart_toStartOf="@+id/button6_read1"
                app:layout_constraintTop_toBottomOf="@+id/button6_read1" />

            <Button
                android:id="@+id/button8_read3"
                android:layout_width="230dp"
                android:layout_height="70dp"

                android:text="@string/Activity8Read3"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:visibility="visible"
                app:backgroundTint="@color/teal_700"
                app:cornerRadius="50dp"
                app:layout_constraintEnd_toEndOf="@+id/button7_read2"
                app:layout_constraintStart_toStartOf="@+id/button7_read2"
                app:layout_constraintTop_toBottomOf="@+id/button7_read2" />

            <Button
                android:id="@+id/button9_channel"
                android:layout_width="230dp"
                android:layout_height="70dp"

                android:text="@string/Activity9Channel"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:visibility="visible"
                app:backgroundTint="@android:color/holo_blue_dark"
                app:cornerRadius="50dp"
                app:layout_constraintEnd_toEndOf="@+id/button7_read2"
                app:layout_constraintStart_toStartOf="@+id/button7_read2"
                app:layout_constraintTop_toBottomOf="@+id/button8_read3" />

            <Button
                android:id="@+id/button10_division"
                android:layout_width="230dp"
                android:layout_height="70dp"

                android:text="@string/Activity10Division"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:visibility="visible"
                app:backgroundTint="@color/purple_500"
                app:cornerRadius="50dp"
                app:layout_constraintEnd_toEndOf="@+id/button9_channel"
                app:layout_constraintStart_toStartOf="@+id/button9_channel"
                app:layout_constraintTop_toBottomOf="@+id/button9_channel" />

            <Button
                android:id="@+id/button11_compose"
                android:layout_width="230dp"
                android:layout_height="70dp"

                android:layout_marginBottom="20dp"
                android:text="@string/Activity11Compose"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:visibility="visible"
                app:backgroundTint="@color/orange"
                app:cornerRadius="50dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/button9_channel"
                app:layout_constraintStart_toStartOf="@+id/button9_channel"
                app:layout_constraintTop_toBottomOf="@id/button10_division" />

            <Button
                android:id="@+id/buttonDesignBy"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:insetLeft="0dp"
                android:insetRight="0dp"
                android:text="@string/about"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:visibility="gone"
                app:backgroundTint="@color/purple_500"
                app:cornerRadius="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/button11_compose"
                tools:visibility="gone" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/bg2" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>