<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity2Choose"

    android:fitsSystemWindows="true"

    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView02"

                android:layout_width="0dp"

                android:layout_height="70dp"
                android:background="@color/dark_orange"

                android:fitsSystemWindows="true"

                android:gravity="center"
                android:text="@string/title_02"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageChoose"
                android:layout_width="300dp"
                android:layout_height="500dp"

                android:layout_marginStart="20dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="20dp"
                android:contentDescription="@string/app_name"
                android:scaleType="fitCenter"
                app:layout_constraintEnd_toEndOf="@+id/textView02"
                app:layout_constraintStart_toStartOf="@+id/textView02"
                app:layout_constraintTop_toBottomOf="@+id/textView02" />

            <Button
                android:id="@+id/choose"
                android:layout_width="300dp"
                android:layout_height="70dp"

                android:layout_marginTop="50dp"
                android:text="@string/Activity2Choose"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:backgroundTint="@android:color/holo_orange_dark"
                app:cornerRadius="50dp"
                app:layout_constraintEnd_toEndOf="@+id/imageChoose"
                app:layout_constraintStart_toStartOf="@+id/imageChoose"
                app:layout_constraintTop_toBottomOf="@+id/imageChoose" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>