<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity3Save"

    android:fitsSystemWindows="true"

    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView03"

                android:layout_width="0dp"

                android:layout_height="70dp"
                android:background="@color/purple_500"

                android:fitsSystemWindows="true"

                android:gravity="center"
                android:text="@string/title_03"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageSave"
                android:layout_width="300dp"
                android:layout_height="500dp"

                android:layout_marginStart="20dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="20dp"
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="@+id/textView03"
                app:layout_constraintStart_toStartOf="@+id/textView03"
                app:layout_constraintTop_toBottomOf="@+id/textView03"
                app:srcCompat="@drawable/microsoft" />

            <Button
                android:id="@+id/save"
                android:layout_width="300dp"
                android:layout_height="70dp"

                android:layout_marginTop="50dp"
                android:text="@string/Activity3Save"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:backgroundTint="@color/purple_500"
                app:cornerRadius="50dp"
                app:layout_constraintEnd_toEndOf="@+id/imageSave"
                app:layout_constraintStart_toStartOf="@+id/imageSave"
                app:layout_constraintTop_toBottomOf="@+id/imageSave" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>